--- a/css/me.css
+++ b/css/me.css
@@ -72,4 +72,22 @@
           /* color: red; */
           text-align: center;
       }
+      .test-result-red{
+          color: red;
+      }
+      .test-result-blue{
+        color: blue;
+    }
+    .test-result-green{
+        color: rgb(6, 248, 6);;
+    }
+    .attribute-table-red{
+        color: red;
+    }
+    .attribute-table-green{
+        color: rgb(6, 248, 6);
+    }
+    .attribute-table-blue{
+        color: blue;
+    }
   </style>
