--- a/css/me.css
+++ b/css/me.css
@@ -96,4 +96,7 @@
     .BoundingLine-Thead{
         border-top: 2px solid black;
     }
+    .lun-picture{
+        font-size: 10px;
+    }
   </style>
